--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -100,6 +100,9 @@
     </Compile>
     <Compile Include="Models\FileItem.cs" />
     <Compile Include="Models\MenuFolderItem.cs" />
+    <Compile Include="Models\ThumbnailToImageConverter.cs" />
+    <Compile Include="Models\VisibleOnExistsConverter.cs" />
+    <Compile Include="Models\VisibleOnNullConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
