--- a/FileExplorer/project.json
+++ b/FileExplorer/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
+    "PlatformSpecific.Analyzer": "2.0.3"
   },
   "frameworks": {
     "uap10.0": {}
