--- a/FileExplorer/FileExplorer.csproj
+++ b/FileExplorer/FileExplorer.csproj
@@ -17,7 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <PackageCertificateKeyFile>FileExplorer_TemporaryKey.pfx</PackageCertificateKeyFile>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x64</AppxBundlePlatforms>
   </PropertyGroup>
@@ -105,9 +105,9 @@
     </Compile>
     <Compile Include="Models\FileItem.cs" />
     <Compile Include="Models\MenuFolderItem.cs" />
-    <Compile Include="Models\ThumbnailToImageConverter.cs" />
-    <Compile Include="Models\VisibleOnExistsConverter.cs" />
-    <Compile Include="Models\VisibleOnNullConverter.cs" />
+    <Compile Include="Converters\ThumbnailToImageConverter.cs" />
+    <Compile Include="Converters\VisibleOnExistsConverter.cs" />
+    <Compile Include="Converters\VisibleOnNullConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
